--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -65,19 +65,32 @@
       e.target.classList.remove('playing');
     }
 
-    function playSound(e) {
-      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-      const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-      if (!audio) return;
+    function playSoundByKey(e) {
+      playSound(e.keyCode);
+    }
 
+    function playSoundByClick(e) {
+      // Find div.key node to extract the data-key attribute value
+      const keyNode = e.target.classList.contains('key') ? e.target : e.target.parentNode;
+      const keyCode = keyNode.attributes.item('data-key').value;
+      playSound(keyCode);
+    }
+
+    function playSound(keyCode) {
+      const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+      const key = document.querySelector(`div[data-key="${keyCode}"]`);
+      if (!audio) return;
       key.classList.add('playing');
       audio.currentTime = 0;
       audio.play();
     }
 
     const keys = Array.from(document.querySelectorAll('.key'));
-    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-    window.addEventListener('keydown', playSound);
+    keys.forEach(key => {
+      key.addEventListener('transitionend', removeTransition);
+      key.addEventListener('click', playSoundByClick);
+    });
+    window.addEventListener('keydown', playSoundByKey);
   </script>
 
 </body>
