--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
-  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <p>
+    <em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
 
     // Some data we can work with
+
 
     const inventors = [
       { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
@@ -31,29 +35,61 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const bornIn1950s = inventors.filter(i => i.year >= 1500 && i.year < 1600)
+    console.table(bornIn1950s)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const firstAndLastNames = inventors.map(i => (`${i.first} ${i.last}`))
+    console.table(firstAndLastNames)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortedByBirthdayDesc = inventors.sort((a, b) => a.year > b.year ? 1 : -1)
+    console.table(sortedByBirthdayDesc)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((total, inventor) => total + (inventor.passed - inventor.year), 0);
+    console.log('totalyears', totalYears)
 
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort((a, b) => {
+      const lastGuy = a.passed - a.year;
+      const nextGuy = b.passed - b.year;
+      return lastGuy > nextGuy ? -1 : 1;
+    })
+    console.table(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const category = document.querySelector('.mw-category');
+    // const links = category.querySelectorAll('a');
+    // const de = Array.from(links)
+    //   .map(link => link.textContent)
+    //   .filter(text => text.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedPeople = people.sort((a, b) => {
+      const [aLast] = a.toUpperCase().split(', ');
+      const [bLast] = b.toUpperCase().split(', ');
+      return aLast < bLast ? -1 : 1;
+    });
+    console.table(sortedPeople);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+    const transportation = data.reduce((obj, next) => {
+      if (!obj.hasOwnProperty(next)) {
+        obj[next] = 0;
+      }
+      obj[next]++;
+      return obj;
+    }, {})
+    console.table(transportation)
   </script>
 </body>
+
 </html>
