--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -15,22 +15,32 @@
     // and we want to make a copy of it.
 
     // You might think we can just do something like this:
+    const newArray = players;
 
     // however what happens when we update that array?
 
     // now here is the problem!
 
     // oh no - we have edited the original array too!
+    // console.log(players);
 
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
 
     // one way
+    // const oneWay = new Array(...players);
+    const anotherWay = Array.from(players);
+    const slice = players.slice();
+    players[0] = 'Nico';
+
+    // console.log(oneWay, anotherWay, slice);
 
     // or create a new array and concat the old one in
+    const thirdWay = [].concat(players);
 
     // or use the new ES6 Spread
+    const es6Way = [...players];
 
     // now when we update it, the original one isn't changed
 
@@ -38,17 +48,34 @@
 
     // with Objects
     const person = {
-      name: 'Wes Bos',
+      name: 'Someone',
       age: 80
     };
 
     // and think we make a copy:
+    const captain = Object.assign({}, person, {age: 20, number: 1111})
+    // console.log(captain);
 
     // how do we take a copy instead?
+    const cap3 = {...person}
+    // console.log(cap3)
 
     // We will hopefully soon see the object ...spread
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+
+    const nico = {
+      name: "Nico",
+      age: 31,
+      social: {
+        twitter: '@nico',
+        facebook: 'nico.martinez'
+      }
+    };
+
+    const shallow = Object.assign({}, nico);
+
+    const deep = JSON.parse(JSON.stringify(nico));
 
   </script>
 
