complete 25 Event Capture, Propagation, Bubbling and Once

--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -40,6 +40,15 @@
 <button></button>
 <script>
 
+  const divs = document.querySelectorAll('div');
+  
+  function logText(e) {
+    console.log(this.classList.value);
+    // e.stopPropagation(); // stop bubbling!
+  }
+
+  divs.forEach(div => div.addEventListener('click', logText, {capture:true, once: false}));
+
 </script>
 </body>
 </html>
